Fix z-index of nav

--- a/app/assets/css/modules/nav.scss
+++ b/app/assets/css/modules/nav.scss
@@ -19,7 +19,7 @@ nav#nav
     background-color: transparent;
     display: block;
     position: fixed;
-    z-index: 10;
+    z-index: 20;
 
     @include transition
     {
